...
        }}
      />
      <Tabs.Screen
        name="projects"
        options={{
          title: "Projects",
          tabBarButtonTestID: "tab-projects",
          tabBarIcon: ({ color, focused }) => (
            <TabIcon icon={FolderGit2} color={color} focused={focused} />
          ),
        }}
      />
      <Tabs.Screen
        name="settings"
        options={{
          title: "Host",
          tabBarButtonTestID: "tab-host",
          tabBarIcon: ({ color, focused }) => (
            <TabIcon icon={MonitorSmartphone} color={color} focused={focused} />
          ),
        }}
      />
    </Tabs>
...
